samples/_failures_safe/1761323802_c61711_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2518fc66.c: In function ‘main’:
./samples/SAFE/__tmp_2518fc66.c:174:5: error: expected declaration or statement at end of input
  174 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_2518fc66.c:174:5: error: expected declaration or statement at end of input
